# world-cup-predictor

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  ai-system-dev.md  docker-compose.yml  package-lock.json  package.json  render.yaml  tailwind.config.ts
.github/workflows/: ci-cd.yml
backend/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  reset_admin.py  test_db_init.py  test_fixture_loading.py  verify_seed.py
backend/app/: crud.py  database.py  db.py  main.py  models.py  oauth.py  scheduler.py  seeder.py  sql_models.py  test_data_generator.py  utils.py
backend/app/routers/: admin.py  admin_matches.py  auth.py  groups.py  matches.py  predictions.py  users.py
backend/app/scrapers/: capture_api_calls.py  fifa_fixture.py  fixture_mundial_2026.csv  fixture_mundial_2026.json  load_fixtures.py  test_fifa_api.py
backend/app/services/: match_updater.py  notification_service.py  points_calculator.py
backend/static/assets/: script.js
backend/tests/: test_api.py  test_fixture_loading.py  test_matches.py  test_migration.py  test_predictions_detailed.py
backend/tests_integration/: conftest.py  test_auth_flow.py  test_group_flow.py  test_match_prediction_flow.py
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  openapi.yaml  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
scripts/: README.md  create_test_scenarios.py  seed_predictions.py  setup_e2e_env.py  update_match_status.py
src/: App.tsx  index.css
src/components/: GroupCard.tsx  GroupMembers.tsx
(+41 files in other folders)
