[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "email-validator>=2.3.0",
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "lxml>=6.0.2",
    "pandas>=2.3.3",
    "pdfplumber>=0.11.9",
    "playwright>=1.57.0",
    "pydantic>=2.12.5",
    "pyjwt>=2.10.1",
    "pytest>=9.0.2",
    "requests>=2.32.5",
    "uvicorn>=0.40.0",
]
