[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.0",
    "beautifulsoup4>=4.14.3",
    "email-validator>=2.3.0",
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "lxml>=6.0.2",
    "pandas>=2.3.3",
    "passlib[bcrypt]>=1.7.4",
    "pdfplumber>=0.11.9",
    "playwright>=1.57.0",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "pyjwt>=2.10.1",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.45",
    "uvicorn>=0.40.0",
]

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["tests", "tests_integration"]
